[FIX] tomato out of box. Position, rotation, scale of all fruit and camera

--- a/src/css/Box3D.css
+++ b/src/css/Box3D.css
@@ -1,6 +1,6 @@
 /* Box3D Page - Theo Figma */
 .box3d-page {
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
 }
@@ -9,20 +9,19 @@
 .figma-main-content {
   flex: 1;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-center;  /* Thay đổi từ center thành flex-start */
+  justify-content: flex-center;  /* Thay đổi từ center thành flex-start */
   padding: 0;
   position: relative;
   margin-bottom: 8rem;
-  
 }
 
 .model-viewer-container {
   position: absolute;
-  width: 80%;
+  width: 100%;
   height: 528px;
   left: 0;
-  top: 82px;
+  top: 0;  /* Thay đổi từ 82px thành 0 để đẩy lên đầu */
   background: transparent;
   overflow: hidden;
   position: relative;
